fix(backtest): 종료일 기준으로 평가한다
- DCA·조건부 전략이 종료일과 무관하게 오늘 시세로 평가했다
- KO 5년 DCA 에서 종료일만 2022-09-01 로 당겨도 같은 88.07 을 썼다. 기간을 줄일수록 수익률이 커졌다
- 시세·환율·배당 집계 시점을 종료일에 맞춘다. 종료일이 오늘 이후면 기존대로 현재가